--- a/src/app/pages/medicos/medicos.component.html
+++ b/src/app/pages/medicos/medicos.component.html
@@ -21,9 +21,9 @@
           </ng-container>
           
           <!-- User Column -->
-          <ng-container matColumnDef="medico">
+          <ng-container matColumnDef="nombreMedico">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Medico </th>
-            <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.nombreMedico}} </td>
           </ng-container>
 
           <ng-container matColumnDef="apellidoP">
@@ -51,7 +51,7 @@
           <!-- Status Column -->
           <ng-container matColumnDef="sexo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Sexo </th>
-            <td mat-cell *matCellDef="let row"> {{row.sexo}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.sexo | genero}} </td>
           </ng-container>
           <!-- Status Column -->
           <ng-container matColumnDef="telefono">
