--- a/src/app/pages/pacientes/pacientes.component.html
+++ b/src/app/pages/pacientes/pacientes.component.html
@@ -58,7 +58,7 @@
         <!-- Genero Column -->
         <ng-container matColumnDef="sexo">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Sexo</th>
-          <td mat-cell *matCellDef="let row">{{ row.sexo }}</td>
+          <td mat-cell *matCellDef="let row">{{ row.sexo |  genero}}</td>
         </ng-container>
 
         <!-- Telefono Column -->
